--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
   --bs-gray-300: #cacaca;
   --bs-gray-400: #aab0bc;
   --bs-gray-500: #959ca9;
-  --bs-gray-600: #60697b;
+  --bs-gray-600: #4d5460;
   --bs-gray-700: #2f353a;
   --bs-gray-800: #21262c;
   --bs-gray-900: #1e2228;
